src/perfectscrollbar/css/style.less
/**
 * @Author: yanxinaliang (rainyxlxl@163.com)
 * @Date: 2018/12/28 11:38
 * @Last Modified by: yanxinaliang (rainyxlxl@163.com)
 * @Last Modified time: 2018/12/28 11:38
 * @disc:
 */

.ps-scroll-not-hide{
    .ps__rail-y{
        opacity: 0.4;
    }
    .ps__rail-x{
        opacity: 0.4;
    }
}

